RESOLVED FIXED11923
REGRESSION: Placeholder text in password field shows as bullets
https://bugs.webkit.org/show_bug.cgi?id=11923
Summary REGRESSION: Placeholder text in password field shows as bullets
Matt Lilek
Reported 2006-12-21 22:54:37 PST
Placeholder text on non-search field elements seems to have made a reappearance recently but when used on password fields, the placeholder is displayed as security bullets making it rather useless.
Attachments
disable text security temporary when showing placeholder (10.62 KB, patch)
2007-02-13 16:33 PST, Antti Koivisto
hyatt: review+
Mark Rowe (bdash)
Comment 1 2007-01-28 19:05:41 PST
Adele Peterson
Comment 2 2007-02-13 14:30:14 PST
Right now, we have this rule in html4.css: input[type="password"] { -webkit-text-security: disc !important; } We could remove this, and set the property in RenderTextControl. We would need code in RenderTextControl::createInnerTextStyle and in RenderTextControl::updatePlaceholder.
Antti Koivisto
Comment 3 2007-02-13 16:33:50 PST
Created attachment 13158 [details] disable text security temporary when showing placeholder
Dave Hyatt
Comment 4 2007-02-14 02:04:07 PST
Comment on attachment 13158 [details] disable text security temporary when showing placeholder r=me I wasn't aware we even supported placeholder text on non-search fields...
Antti Koivisto
Comment 5 2007-02-14 03:05:03 PST
Note You need to log in before you can comment on or make changes to this bug.