LayoutTests:

Reviewed by Hyatt.

        - layout test for http://bugs.webkit.org/show_bug.cgi?id=11923
        REGRESSION: Placeholder text in password field shows as bullets
        <rdar://problem/4960257>

        * fast/forms/password-placeholder-expected.checksum: Added.
        * fast/forms/password-placeholder-expected.png: Added.
        * fast/forms/password-placeholder-expected.txt: Added.
        * fast/forms/password-placeholder.html: Added.

WebCore:

        Reviewed by Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=11923
        REGRESSION: Placeholder text in password field shows as bullets
        <rdar://problem/4960257>

        Disable textSecurity when placeholder is visible.

        * rendering/RenderTextControl.cpp:
        (WebCore::RenderTextControl::updatePlaceholder):



Canonical link: https://commits.webkit.org/16496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19620 268f45cc-cd09-0410-ab3c-d52691b4dbfc